[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/devnull/LevelFinish.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/CheckpointSaved.wav" type="AudioStream" id=2]

[sub_resource type="CylinderMesh" id=4]
top_radius = 2.0
bottom_radius = 2.0
height = 0.2

[sub_resource type="CylinderShape" id=5]
height = 0.125
radius = 2.0

[sub_resource type="CylinderShape" id=6]
radius = 2.0

[sub_resource type="CylinderShape" id=9]
height = 4.0
radius = 0.0999979

[sub_resource type="CylinderMesh" id=10]
top_radius = 0.1
bottom_radius = 0.1
height = 4.0

[sub_resource type="CylinderMesh" id=11]
top_radius = 2.0
bottom_radius = 2.0
height = 4.0

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
params_blend_mode = 1
albedo_color = Color( 0.352941, 0.101961, 0.427451, 0.0980392 )
emission_enabled = true
emission = Color( 0.878431, 0.505882, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 2.0
distance_fade_max_distance = 20.0

[sub_resource type="StyleBoxFlat" id=13]

[node name="LevelFinish" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.013, 0 )
shape = SubResource( 5 )

[node name="Trigger" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
shape = SubResource( 6 )

[node name="SaveSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 2 )

[node name="Pillar" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.031, 1.841 )

[node name="CollisionShape" type="CollisionShape" parent="Pillar"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Pillar"]
mesh = SubResource( 10 )

[node name="Pillar2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.031, -1.8212 )

[node name="CollisionShape" type="CollisionShape" parent="Pillar2"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Pillar2"]
mesh = SubResource( 10 )

[node name="Pillar3" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86081, 2.031, -0.00455749 )

[node name="CollisionShape" type="CollisionShape" parent="Pillar3"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Pillar3"]
mesh = SubResource( 10 )

[node name="Pillar4" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85367, 2.031, -0.00455749 )

[node name="CollisionShape" type="CollisionShape" parent="Pillar4"]
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Pillar4"]
mesh = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.031, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="LevelDoneUI" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false

[node name="CenterContainer" type="CenterContainer" parent="LevelDoneUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="LevelDoneUI/CenterContainer"]
margin_left = 793.0
margin_top = 443.0
margin_right = 807.0
margin_bottom = 457.0

[node name="MarginContainer" type="MarginContainer" parent="LevelDoneUI/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 157.0
margin_bottom = 151.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer"]
margin_right = 150.0
margin_bottom = 144.0

[node name="Headline" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "Level complete"

[node name="HSeparator" type="HSeparator" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 22.0

[node name="PointsHeadline" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 150.0
margin_bottom = 40.0
text = "Score"
align = 1

[node name="GridContainer" type="GridContainer" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 0 )
columns = 3

[node name="ScoreLabel" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "Points"

[node name="VSeparator" type="VSeparator" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_right = 122.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 13 )

[node name="ScoreValue" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_right = 150.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="HealthLabel" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
text = "Health"

[node name="HealthMulti" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_top = 18.0
margin_right = 122.0
margin_bottom = 32.0
text = "x 100"
align = 1

[node name="HealthValue" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_top = 18.0
margin_right = 150.0
margin_bottom = 32.0
text = "600"
align = 2

[node name="TimeLabel" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 42.0
margin_bottom = 50.0
text = "Time"

[node name="TimeRaw" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_top = 36.0
margin_right = 122.0
margin_bottom = 50.0
text = "01:30"
align = 1

[node name="TimeValue" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_top = 36.0
margin_right = 150.0
margin_bottom = 50.0
text = "126"
align = 2

[node name="TotalLabel" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 42.0
margin_bottom = 68.0
text = "Total"

[node name="VSeparator2" type="VSeparator" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_top = 54.0
margin_right = 122.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 13 )

[node name="TotalValue" type="Label" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_top = 54.0
margin_right = 150.0
margin_bottom = 68.0
text = "900"

[node name="HSeparator2" type="HSeparator" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 150.0
margin_bottom = 120.0

[node name="Button" type="Button" parent="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 150.0
margin_bottom = 144.0
text = "Next"

[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="pressed" from="LevelDoneUI/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_next_pressed"]
